crates/parser/tests/snapshots/snapshots__mixed_hex_rgb.snap
---
source: crates/parser/tests/snapshots.rs
expression: result
---
palettes:
  - name: primary
    colors:
      - hex: "#66BB6A"
        alpha: 1
        name: ~
      - hex: "#FAFAFA"
        alpha: 1
        name: ~
