crates/parser/tests/snapshots/snapshots__scss_sections.snap
---
source: crates/parser/tests/snapshots.rs
expression: result
---
palettes:
  - name: Gray Scale
    colors:
      - hex: "#FAFAFA"
        alpha: 1
        name: gray-50
      - hex: "#F5F5F5"
        alpha: 1
        name: gray-100
      - hex: "#171717"
        alpha: 1
        name: gray-900
  - name: Primary Colors (Ocean Theme)
    colors:
      - hex: "#F0FDFA"
        alpha: 1
        name: ocean-50
      - hex: "#40E0D0"
        alpha: 1
        name: ocean-400
      - hex: "#134E4A"
        alpha: 1
        name: ocean-900
  - name: Semantic Colors
    colors:
      - hex: "#FFFFFF"
        alpha: 1
        name: white
      - hex: "#1A1A1A"
        alpha: 1
        name: black
  - name: Status Colors
    colors:
      - hex: "#F0FDF4"
        alpha: 1
        name: success-50
      - hex: "#16A34A"
        alpha: 1
        name: success-500
      - hex: "#FEF2F2"
        alpha: 1
        name: error-50
      - hex: "#FEFCE8"
        alpha: 1
        name: warning-50
